--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -7,9 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Publications markdown generator for academicpages\n",
+    "# projects markdown generator for academicpages\n",
     "\n",
-    "Takes a TSV of publications with metadata and converts them for use with [academicpages.github.io](academicpages.github.io). This is an interactive Jupyter notebook ([see more info here](http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html)). The core python code is also in `publications.py`. Run either from the `markdown_generator` folder after replacing `publications.tsv` with one containing your data.\n",
+    "Takes a TSV of projects with metadata and converts them for use with [academicpages.github.io](academicpages.github.io). This is an interactive Jupyter notebook ([see more info here](http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html)). The core python code is also in `projects.py`. Run either from the `markdown_generator` folder after replacing `projects.tsv` with one containing your data.\n",
     "\n",
     "TODO: Make this work with BibTex and other databases of citations, rather than Stuart's non-standard TSV format and citation style.\n"
    ]
@@ -24,7 +24,7 @@
     "\n",
     "- `excerpt` and `paper_url` can be blank, but the others must have values. \n",
     "- `pub_date` must be formatted as YYYY-MM-DD.\n",
-    "- `url_slug` will be the descriptive part of the .md file and the permalink URL for the page about the paper. The .md file will be `YYYY-MM-DD-[url_slug].md` and the permalink will be `https://[yourdomain]/publications/YYYY-MM-DD-[url_slug]`\n",
+    "- `url_slug` will be the descriptive part of the .md file and the permalink URL for the page about the paper. The .md file will be `YYYY-MM-DD-[url_slug].md` and the permalink will be `https://[yourdomain]/projects/YYYY-MM-DD-[url_slug]`\n",
     "\n",
     "This is how the raw file looks (it doesn't look pretty, use a spreadsheet or other program to edit and create)."
    ]
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "!cat publications.tsv"
+    "!cat projects.tsv"
    ]
   },
   {
@@ -195,8 +195,8 @@
     }
    ],
    "source": [
-    "publications = pd.read_csv(\"publications.tsv\", sep=\"\\t\", header=0)\n",
-    "publications\n"
+    "projects = pd.read_csv(\"projects.tsv\", sep=\"\\t\", header=0)\n",
+    "projects\n"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "for row, item in publications.iterrows():\n",
+    "for row, item in projects.iterrows():\n",
     "    \n",
     "    md_filename = str(item.pub_date) + \"-\" + item.url_slug + \".md\"\n",
     "    html_filename = str(item.pub_date) + \"-\" + item.url_slug\n",
@@ -259,9 +259,9 @@
     "    \n",
     "    md = \"---\\ntitle: \\\"\"   + item.title + '\"\\n'\n",
     "    \n",
-    "    md += \"\"\"collection: publications\"\"\"\n",
+    "    md += \"\"\"collection: projects\"\"\"\n",
     "    \n",
-    "    md += \"\"\"\\npermalink: /publication/\"\"\" + html_filename\n",
+    "    md += \"\"\"\\npermalink: /projects/\"\"\" + html_filename\n",
     "    \n",
     "    if len(str(item.excerpt)) > 5:\n",
     "        md += \"\\nexcerpt: '\" + html_escape(item.excerpt) + \"'\"\n",
@@ -295,7 +295,7 @@
     "    \n",
     "    md_filename = os.path.basename(md_filename)\n",
     "       \n",
-    "    with open(\"../_publications/\" + md_filename, 'w') as f:\n",
+    "    with open(\"../_projects/\" + md_filename, 'w') as f:\n",
     "        f.write(md)"
    ]
   },
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These files are in the publications directory, one directory below where we're working from."
+    "These files are in the projects directory, one directory below where we're working from."
    ]
   },
   {
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "!ls ../_publications/"
+    "!ls ../_projects/"
    ]
   },
   {
@@ -343,8 +343,8 @@
      "text": [
       "---\n",
       "title: \"Paper Title Number 1\"\n",
-      "collection: publications\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\n",
+      "collection: projects\n",
+      "permalink: /projects/2009-10-01-paper-title-number-1\n",
       "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\n",
       "date: 2009-10-01\n",
       "venue: 'Journal 1'\n",
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "!cat ../_publications/2009-10-01-paper-title-number-1.md"
+    "!cat ../_projects/2009-10-01-paper-title-number-1.md"
    ]
   },
   {
